switch to local bootstrap ruleset
* remove dependency on @obazl_rules_ocaml

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,7 +1,7 @@
-load("@obazl_rules_ocaml//ocaml:rules.bzl",
-     "ocaml_archive",
-     "ocaml_executable",
-     "ocaml_module",
+load("//bzl:rules.bzl",
+     "bootstrap_archive",
+     "bootstrap_executable",
+     "bootstrap_module",
 )
 
 exports_files(["Makefile.config", "VERSION"])
@@ -21,7 +21,7 @@ MAIN_DEPS = [
 ]
 
 #################
-ocaml_executable(
+bootstrap_executable(
     name    = "main.exe",
     visibility = ["//visibility:public"],
     exe     = "main",
@@ -45,7 +45,7 @@ OPTMAIN_DEPS = [
 ]
 
 #################
-ocaml_executable(
+bootstrap_executable(
     name    = "optmain.exe",
     visibility = ["//visibility:public"],
     exe     = "optmain",
@@ -69,126 +69,126 @@ OCAMLCOMMON_DEPS = [
 ]
 
 ##############
-ocaml_archive(
-    name    = "ocamlcommon",
-    visibility = ["//visibility:public"],
-    modules = [
-        ":Annot",
-        ":Arg_helper",
-        ":Ast_helper",
-        ":Ast_invariants",
-        ":Ast_iterator",
-        ":Ast_mapper",
-        ":Asttypes",
-        ":Attr_helper",
-        ":Binutils",
-        ":Btype",
-        ":Build_path_prefix_map",
-        ":Builtin_attributes",
-        ":Bytesections",
-        ":CamlinternalMenhirLib",
-        ":Ccomp",
-        ":Clflags",
-        ":Cmi_format",
-        ":Cmo_format",
-        ":Cmt2annot",
-        ":Cmt_format",
-        ":Compenv",
-        ":Compile_common",
-        ":Compmisc",
-        ":Config",
-        ":Consistbl",
-        ":Ctype",
-        ":Datarepr",
-        ":Debuginfo",
-        ":Depend",
-        ":Diffing",
-        ":Diffing_with_keys",
-        ":Dll",
-        ":Docstrings",
-        ":Env",
-        ":Envaux",
-        ":Errortrace",
-        ":Ident",
-        ":Identifiable",
-        ":Includeclass",
-        ":Includecore",
-        ":Includemod",
-        ":Includemod_errorprinter",
-        ":Instruct",
-        ":Int_replace_polymorphic_compare",
-        ":Lambda",
-        ":Lazy_backtrack",
-        ":Lexer",
-        ":Load_path",
-        ":Local_store",
-        ":Location",
-        ":Longident",
-        ":Main_args",
-        ":Makedepend",
-        ":Matching",
-        ":Meta",
-        ":Misc",
-        ":Mtype",
-        ":Numbers",
-        ":Opcodes",
-        ":Oprint",
-        ":Outcometree",
-        ":Parmatch",
-        ":Parse",
-        ":Parser",
-        ":Parsetree",
-        ":Path",
-        ":Patterns",
-        ":Persistent_env",
-        ":Pparse",
-        ":Pprintast",
-        ":Predef",
-        ":Primitive",
-        ":Printast",
-        ":Printlambda",
-        ":Printpat",
-        ":Printtyp",
-        ":Printtyped",
-        ":Profile",
-        ":Rec_check",
-        ":Runtimedef",
-        ":Signature_group",
-        ":Simplif",
-        ":Strongly_connected_components",
-        ":Stypes",
-        ":Subst",
-        ":Switch",
-        ":Symtable",
-        ":Syntaxerr",
-        ":Targetint",
-        ":Tast_iterator",
-        ":Tast_mapper",
-        ":Terminfo",
-        ":Translattribute",
-        ":Translclass",
-        ":Translcore",
-        ":Translmod",
-        ":Translobj",
-        ":Translprim",
-        ":Type_immediacy",
-        ":Typeclass",
-        ":Typecore",
-        ":Typedecl",
-        ":Typedecl_immediacy",
-        ":Typedecl_properties",
-        ":Typedecl_separability",
-        ":Typedecl_unboxed",
-        ":Typedecl_variance",
-        ":Typedtree",
-        ":Typemod",
-        ":Typeopt",
-        ":Types",
-        ":Typetexp",
-        ":Untypeast",
-        ":Warnings",
-    ],
-)
+# bootstrap_archive(
+#     name    = "ocamlcommon",
+#     visibility = ["//visibility:public"],
+#     manifest = [
+#         ":Annot",
+#         ":Arg_helper",
+#         ":Ast_helper",
+#         ":Ast_invariants",
+#         ":Ast_iterator",
+#         ":Ast_mapper",
+#         ":Asttypes",
+#         ":Attr_helper",
+#         ":Binutils",
+#         ":Btype",
+#         ":Build_path_prefix_map",
+#         ":Builtin_attributes",
+#         ":Bytesections",
+#         ":CamlinternalMenhirLib",
+#         ":Ccomp",
+#         ":Clflags",
+#         ":Cmi_format",
+#         ":Cmo_format",
+#         ":Cmt2annot",
+#         ":Cmt_format",
+#         ":Compenv",
+#         ":Compile_common",
+#         ":Compmisc",
+#         ":Config",
+#         ":Consistbl",
+#         ":Ctype",
+#         ":Datarepr",
+#         ":Debuginfo",
+#         ":Depend",
+#         ":Diffing",
+#         ":Diffing_with_keys",
+#         ":Dll",
+#         ":Docstrings",
+#         ":Env",
+#         ":Envaux",
+#         ":Errortrace",
+#         ":Ident",
+#         ":Identifiable",
+#         ":Includeclass",
+#         ":Includecore",
+#         ":Includemod",
+#         ":Includemod_errorprinter",
+#         ":Instruct",
+#         ":Int_replace_polymorphic_compare",
+#         ":Lambda",
+#         ":Lazy_backtrack",
+#         ":Lexer",
+#         ":Load_path",
+#         ":Local_store",
+#         ":Location",
+#         ":Longident",
+#         ":Main_args",
+#         ":Makedepend",
+#         ":Matching",
+#         ":Meta",
+#         ":Misc",
+#         ":Mtype",
+#         ":Numbers",
+#         ":Opcodes",
+#         ":Oprint",
+#         ":Outcometree",
+#         ":Parmatch",
+#         ":Parse",
+#         ":Parser",
+#         ":Parsetree",
+#         ":Path",
+#         ":Patterns",
+#         ":Persistent_env",
+#         ":Pparse",
+#         ":Pprintast",
+#         ":Predef",
+#         ":Primitive",
+#         ":Printast",
+#         ":Printlambda",
+#         ":Printpat",
+#         ":Printtyp",
+#         ":Printtyped",
+#         ":Profile",
+#         ":Rec_check",
+#         ":Runtimedef",
+#         ":Signature_group",
+#         ":Simplif",
+#         ":Strongly_connected_components",
+#         ":Stypes",
+#         ":Subst",
+#         ":Switch",
+#         ":Symtable",
+#         ":Syntaxerr",
+#         ":Targetint",
+#         ":Tast_iterator",
+#         ":Tast_mapper",
+#         ":Terminfo",
+#         ":Translattribute",
+#         ":Translclass",
+#         ":Translcore",
+#         ":Translmod",
+#         ":Translobj",
+#         ":Translprim",
+#         ":Type_immediacy",
+#         ":Typeclass",
+#         ":Typecore",
+#         ":Typedecl",
+#         ":Typedecl_immediacy",
+#         ":Typedecl_properties",
+#         ":Typedecl_separability",
+#         ":Typedecl_unboxed",
+#         ":Typedecl_variance",
+#         ":Typedtree",
+#         ":Typemod",
+#         ":Typeopt",
+#         ":Types",
+#         ":Typetexp",
+#         ":Untypeast",
+#         ":Warnings",
+#     ],
+# )
 
 ######## ocamlbytecomp ########
 OCAMLBYTECOMP_OPTS = [
@@ -202,10 +202,10 @@ OCAMLBYTECOMP_DEPS = [
 ]
 
 ##############
-ocaml_archive(
+bootstrap_archive(
     name    = "ocamlbytecomp",
     visibility = ["//visibility:public"],
-    modules = [
+    manifest = [
         ":Bytegen",
         ":Bytelibrarian",
         ":Bytelink",
@@ -230,10 +230,10 @@ OCAMLMIDDLEEND_DEPS = [
 ]
 
 ##############
-ocaml_archive(
+bootstrap_archive(
     name    = "ocamlmiddleend",
     visibility = ["//visibility:public"],
-    modules = [
+    manifest = [
         ":Alias_analysis",
         ":Allocated_const",
         ":Augment_specialised_args",
@@ -331,67 +331,12 @@ OCAMLOPTCOMP_DEPS = [
     # "//.:ocamlmiddleend",
 ]
 
-##############
-ocaml_archive(
-    name    = "ocamloptcomp",
-    visibility = ["//visibility:public"],
-    modules = [
-        ":CSE",
-        ":CSEgen",
-        ":Afl_instrument",
-        ":Arch",
-        ":Asmgen",
-        ":Asmlibrarian",
-        ":Asmlink",
-        ":Asmpackager",
-        ":Branch_relaxation",
-        ":Branch_relaxation_intf",
-        ":Cmm",
-        ":Cmm_helpers",
-        ":Cmm_invariants",
-        ":Cmmgen",
-        ":Cmmgen_state",
-        ":Coloring",
-        ":Comballoc",
-        ":Dataflow",
-        ":Deadcode",
-        ":Domainstate",
-        ":Emit",
-        ":Emitaux",
-        ":Emitenv",
-        ":Interf",
-        ":Interval",
-        ":Linear",
-        ":Linear_format",
-        ":Linearize",
-        ":Linscan",
-        ":Liveness",
-        ":Mach",
-        ":Optcompile",
-        ":Opterrors",
-        ":Optmaindriver",
-        ":Polling",
-        ":Printcmm",
-        ":Printlinear",
-        ":Printmach",
-        ":Proc",
-        ":Reg",
-        ":Reload",
-        ":Reloadgen",
-        ":Schedgen",
-        ":Scheduling",
-        ":Selectgen",
-        ":Selection",
-        ":Spill",
-        ":Split",
-        ":Strmatch",
-        ":X86_ast",
-        ":X86_dsl",
-        ":X86_gas",
-        ":X86_masm",
-        ":X86_proc",
-    ],
-)
+################
+# ocamlc.opt$(EXE): compilerlibs/ocamlcommon.cmxa \
+#                   compilerlibs/ocamlbytecomp.cmxa $(BYTESTART:.cmo=.cmx)
+# 	$(CAMLOPT_CMD) $(LINKFLAGS) -o $@ $^ -cclib "$(BYTECCLIBS)"
+
+
 
 #############################
 ####  Singleton Targets  ####
