--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -7,16 +7,19 @@ load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
 load("//:WORKSPACE.bzl", "obazl_deps")
 obazl_deps()
 
-load("@obazl_rules_ocaml//ocaml:rules.bzl",
-     "new_local_pkg_repository")
+# load("//bzl:rules.bzl",
+#      "new_local_pkg_repository")
 
 #################################################
-load("@opam//:WORKSPACE.bzl", "opam_fetch_repos")
-opam_fetch_repos()
+# load("@opam//:WORKSPACE.bzl", "opam_fetch_repos")
+# opam_fetch_repos()
 
 # for re2c in tools_opam update tool:
-load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
-rules_foreign_cc_dependencies()
+# load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
+# rules_foreign_cc_dependencies()
 
-load("@obazl_rules_ocaml//ocaml:bootstrap.bzl", "ocaml_configure")
-ocaml_configure(switch = "4.10", bootstrap = True)
+# load("@obazl_rules_ocaml//ocaml:bootstrap.bzl", "ocaml_configure")
+# ocaml_configure(switch = "4.10", bootstrap = True)
+
+load("//bzl/toolchain:BUILD.bzl", "bootstrap_register_toolchains")
+bootstrap_register_toolchains(installation="host")
