--- a/utils/BUILD.bazel
+++ b/utils/BUILD.bazel
@@ -1,33 +1,35 @@
-load("@obazl_rules_ocaml//ocaml:rules.bzl",
-     "ocaml_library",
+load("//bzl:rules.bzl",
+     "bootstrap_archive",
      "bootstrap_module",
      "bootstrap_signature",
+     # "ocaml_library"
 )
 
-load("//config:BUILD.bzl", "COMPFLAGS")
+load("//config:BUILD.bzl", "ROOT_MODULE_OPTS", "ROOT_SIG_OPTS")
 load(":BUILD.bzl", "CONFIG_MAP", "write_config")
 
 ## root Makefile
 # CAMLC=$(BOOT_OCAMLC) -g -nostdlib -I boot -use-prims runtime/primitives
 
-MODULE_OPTS = COMPFLAGS + ["-I", "boot"]
-               # "-use-prims", "runtime/primitives"]
+MODULE_OPTS = ROOT_MODULE_OPTS
+##+ ["-I", "boot"]
+# "-use-prims", "runtime/primitives"]
 
-SIG_OPTS = MODULE_OPTS
+SIG_OPTS = ROOT_SIG_OPTS
 
 STDLIB = ["//stdlib"]
-
 
 # COMMON_CMI = $(UTILS_CMI) $(PARSING_CMI) $(TYPING_CMI) $(LAMBDA_CMI) $(COMP_CMI)
 # COMMON = $(UTILS) $(PARSING) $(TYPING) $(LAMBDA) $(COMP)
 # compilerlibs/ocamlcommon.cma: $(COMMON_CMI) $(COMMON)
 # 	$(CAMLC) -a -linkall -o $@ $(COMMON)
 
-ocaml_library(
+bootstrap_archive(
+# bootstrap_library(
     name = "utils",
-    modules  = [
+    mode = "bytecode",
+    manifest  = [
         ## list from compilerlibs/Makefile.compilerlibs UTILS
-        "Config",
         "Build_path_prefix_map",
         "Misc",
         "Identifiable",
@@ -48,8 +50,12 @@ ocaml_library(
         "Binutils",
         "Lazy_backtrack",
         "Diffing",
-        "Diffing_with_keys"
-    ]
+        "Diffing_with_keys",
+        ## Misc and Config make inconsistent assumptions over Config iface
+        ## No idea why
+        "Config",
+    ],
+    visibility = ["//compilerlibs:__pkg__"]
 )
 
 
@@ -101,7 +107,8 @@ bootstrap_module(
         "//stdlib:Stdlib.Char",
         "//stdlib:Stdlib.Bytes",
         "//stdlib:Stdlib.Array"
-    ]
+    ],
+    visibility = ["//bytecomp:__pkg__"]
 )
 
 bootstrap_signature(
@@ -150,7 +157,8 @@ bootstrap_module(
         ## (Printf)
         ## (List)
         ## (Filename)
-    ]
+    ],
+    visibility = ["//asmcomp:__pkg__"]
 )
 
 bootstrap_signature(
@@ -177,6 +185,11 @@ bootstrap_module(
         ## (List)
         ## (Filename)
         ## (Arg)
+    ],
+    visibility = [
+        "//asmcomp:__subpackages__",
+        "//parsing:__pkg__",
+        "//typing:__pkg__"
     ]
 )
 
@@ -192,12 +205,25 @@ bootstrap_signature(
     ]
 )
 
+write_config(
+    name     = "config_ml",
+    output   = "config.ml",
+    template = "config.mlp",
+    data     = CONFIG_MAP
+)
+
 bootstrap_module(
     name   = "Config",
     struct = "config.ml",
     sig    = "Config_cmi",
     opts = MODULE_OPTS,
     deps   = STDLIB + [
+    ],
+    data = ["//runtime:primitives"],
+    visibility = [
+        "//asmcomp:__pkg__",
+        "//asmcomp/i386:__pkg__",
+        "//bytecomp:__pkg__"
     ]
 )
 
@@ -206,7 +232,8 @@ bootstrap_signature(
     src  = "config.mli",
     opts = SIG_OPTS,
     deps   = STDLIB + [
-    ]
+    ],
+    data = ["//runtime:primitives"],
 )
 
 bootstrap_module(
@@ -221,7 +248,8 @@ bootstrap_module(
         ## (List)
         ## (Hashtbl)
         ## (Digest)
-    ]
+    ],
+    visibility = ["//typing:__pkg__"]
 )
 
 bootstrap_signature(
@@ -285,14 +313,13 @@ bootstrap_signature(
     deps   = STDLIB + [
         ":Diffing", ## (Utils Diffing)
         ## (Format)
-    ]
+    ],
+    visibility = ["//typing:__pkg__"]
 )
 
-## NB: module name made to match sig, so input may be symlinked.
-## there's a but, for now we use a tmp name for the genfile.
 bootstrap_module(
     name   = "Domainstate",
-    struct = "Xdomainstate.ml",
+    struct = "domainstate.ml",
     sig    = "Domainstate_cmi",
     opts = MODULE_OPTS,
     deps   = STDLIB + [
@@ -301,7 +328,7 @@ bootstrap_module(
 
 genrule(
     name = "domainstate_ml",
-    outs = ["Xdomainstate.ml"],
+    outs = ["domainstate.ml"],
     srcs = ["//runtime/caml:domain_state.tbl"],
     cmd  = "\n".join([
 
@@ -375,7 +402,8 @@ bootstrap_module(
         ## (List)
         ## (Hashtbl)
         ## (Format)
-    ]
+    ],
+    visibility = ["//typing:__pkg__"]
 )
 
 bootstrap_signature(
@@ -396,7 +424,8 @@ bootstrap_module(
     sig    = "Int_replace_polymorphic_compare_cmi",
     opts = MODULE_OPTS,
     deps   = STDLIB + [
-    ]
+    ],
+    visibility = ["//lambda:__pkg__"]
 )
 
 bootstrap_signature(
@@ -414,7 +443,8 @@ bootstrap_module(
     opts = MODULE_OPTS,
     deps   = STDLIB + [
         ## (Either)
-    ]
+    ],
+    visibility = ["//typing:__pkg__"]
 )
 
 bootstrap_signature(
@@ -423,7 +453,8 @@ bootstrap_signature(
     opts = SIG_OPTS,
     deps   = STDLIB + [
         ## (Either)
-    ]
+    ],
+    visibility = ["//typing:__pkg__"]
 )
 
 bootstrap_module(
@@ -440,7 +471,8 @@ bootstrap_module(
         ## (List)
         ## (Filename)
         ## (Array)
-    ]
+    ],
+    visibility = ["//parsing:__pkg__", "//typing:__pkg__"]
 )
 
 bootstrap_signature(
@@ -459,7 +491,8 @@ bootstrap_module(
     deps   = STDLIB + [
         ## (List)
         ## (Fun)
-    ]
+    ],
+    visibility = ["//typing:__pkg__"]
 )
 
 bootstrap_signature(
@@ -498,6 +531,13 @@ bootstrap_module(
         ## (Bytes)
         ## (Buffer)
         ## (Array)
+    ],
+    data = ["//runtime:primitives"],
+    visibility = [
+        "//asmcomp:__subpackages__",
+        "//bytecomp:__pkg__",
+        "//parsing:__pkg__",
+        "//file_formats:__pkg__"
     ]
 )
 
@@ -506,6 +546,7 @@ bootstrap_signature(
     src  = "misc.mli",
     opts = SIG_OPTS,
     deps   = STDLIB + [
+        ":Config_cmi",
         ":Build_path_prefix_map", ## (Utils Build_path_prefix_map)
         ## (String)
         ## (Set)
@@ -513,7 +554,9 @@ bootstrap_signature(
         ## (Hashtbl)
         ## (Format)
         ## (Digest)
-    ]
+    ],
+    data = ["//runtime:primitives"],
+    visibility = ["//file_formats:__pkg__"]
 )
 
 bootstrap_module(
@@ -629,7 +672,8 @@ bootstrap_signature(
     opts = SIG_OPTS,
     deps   = STDLIB + [
         ## (Format)
-    ]
+    ],
+    visibility = ["//asmcomp:__pkg__"]
 )
 
 bootstrap_module(
@@ -640,7 +684,8 @@ bootstrap_module(
     deps   = STDLIB + [
         ## (Sys)
         ## (Printf)
-    ]
+    ],
+    visibility = ["//parsing:__pkg__"]
 )
 
 bootstrap_signature(
@@ -669,7 +714,8 @@ bootstrap_module(
         ## (Char)
         ## (Array)
         ## (Arg)
-    ]
+    ],
+    visibility = ["//parsing:__pkg__"]
 )
 
 bootstrap_signature(
@@ -683,11 +729,4 @@ bootstrap_signature(
 )
 
 ################################################################
-write_config(
-    name     = "config",
-    output   = "config.ml",
-    template = "config.mlp",
-    data     = CONFIG_MAP
-)
-
 ################################################################
